--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     "supertest": "^3.3.0"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
+    "config": "^3.2.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-acl": "^2.0.2",
     "helmet": "^3.21.1",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.7.11",
     "nodemon": "^1.19.4"
   }
