--- a/package.json
+++ b/package.json
@@ -33,10 +33,17 @@
     "config": "^3.2.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-acl": "^2.0.2",
     "helmet": "^3.21.1",
     "jsonwebtoken": "^8.3.0",
+    "module-alias": "^2.2.2",
     "mongoose": "^5.7.11",
     "nodemon": "^1.19.4"
+  },
+  "_moduleAliases": {
+    "@controller": "src/controllers",
+    "@middleware": "src/middleware",
+    "@model": "src/models",
+    "@router": "src/routes",
+    "@utils": "src/utils"
   }
 }
