--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.17.0",
     "config": "^3.2.4",
     "cors": "^2.8.5",
     "ejs": "^3.0.1",
@@ -40,6 +41,7 @@
     "jsonwebtoken": "^8.3.0",
     "module-alias": "^2.2.2",
     "mongoose": "^5.7.11",
+    "multer": "^1.4.2",
     "nodemon": "^1.19.4"
   },
   "_moduleAliases": {
