--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint server.js src test",
     "lint:fix": "eslint server.js src test --fix",
     "debug": "node --nolazy --inspect-brk=9229 ./server.js",
-    "start": "nodemon ./server.js",
+    "start": "node ./server.js",
     "dev": "node ./server.js",
     "test:integration": "NODE_ENV=test mocha  --exit --require test/integration/helpers.js test/integration/**/*_spec.js",
     "test:unit": "NODE_ENV=test mocha --require test/unit/helpers.js test/unit/**/*_spec.js",
@@ -38,6 +38,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-group-routes": "^1.1.0",
+    "express-validator": "^6.3.1",
     "helmet": "^3.21.1",
     "jsonwebtoken": "^8.3.0",
     "module-alias": "^2.2.2",
