--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "module-alias": "^2.2.2",
     "mongoose": "^5.7.11",
     "multer": "^1.4.2",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "util": "^0.12.1"
   },
   "_moduleAliases": {
     "@config": "src/config",
